# Galvanizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Application.h  BaseWindow.h  EventConfigurations.h  EventLoop.h  Events.h  Factory.h  GLFW_BlockingObject.h  GalvanizerObject.h  GalvanizerRef.h  MainWindow.h  Quad.h  QuadRenderer.h  Queue.h  Timer.h  Utility.h  units.h
include/openglAbstraction/: Buffer.h  GPUTexture.h  InstanceArray.h  Mesh.h  Program.h  RenderObject.h  Renderer.h  Technique.h  VertexSetup.h
include/renderAbstraction/: Buffer.h  GPUTexture.h  InstanceArray.h  Mesh.h  RenderObject.h  Renderer.h  Technique.h  VertexSetup.h
src/: Application.cpp  BaseWindow.cpp  EventConfigurations.cpp  EventLoop.cpp  Events.cpp  Factory.cpp  GLFWCallbacks.inl  GLFW_BlockingObject.cpp  GalvanizerObject.cpp  GalvanizerRef.cpp  MainWindow.cpp  Quad.cpp  QuadRenderer.cpp  Queue.cpp  Utility.cpp
src/openglAbstraction/: Buffer.cpp  GLErr.inl  GPUTexture.cpp  Mesh.cpp  Program.cpp  Renderer.cpp  Technique.cpp  VertexSetup.cpp
src/renderAbstraction/: Buffer.cpp  GPUTexture.cpp  Mesh.cpp  Program.cpp  Renderer.cpp  Technique.cpp  VertexSetup.cpp
src/shaders/: Default.frag  Default.vert  GenDefShader.py
tests/: CMakeLists.txt
tests/SimpleWindow/: CMakeLists.txt  README.md
tests/SimpleWindow/include/: PluginWindow.h  PluginWindowV2.h  SimpleChild.h  SimpleChild2.h  SimpleWindow.h
tests/SimpleWindow/src/: PluginWindow.cpp  PluginWindowV2.cpp  SimpleChild.cpp  SimpleChild2.cpp  SimpleWindow.cpp  main.cpp
